--- a/stgWIFI/stgWIFI.csproj
+++ b/stgWIFI/stgWIFI.csproj
@@ -409,6 +409,7 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
+    <Content Include="WebForm.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="About.aspx.cs">
@@ -477,6 +478,13 @@
     </Compile>
     <Compile Include="STGServices.aspx.designer.cs">
       <DependentUpon>STGServices.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebForm.aspx.cs">
+      <DependentUpon>WebForm.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebForm.aspx.designer.cs">
+      <DependentUpon>WebForm.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
